--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ body {
 h1, h2, h3 {
     margin: 0;
     padding: 0;
-
     font-weight: 500;
     line-height: 1.1;
 }
@@ -78,7 +77,7 @@ h1, h2, h3 {
 }
 
 .start {
-    background-color: #cc5f79;
+    background-color: #558596;
 }
 
 .start h1 {
@@ -97,6 +96,7 @@ h1, h2, h3 {
     cursor: pointer;
     font-weight: 400;
     font-family: inherit;
+    outline: none;
 }
 
 .start button:hover {
@@ -170,36 +170,101 @@ h1, h2, h3 {
 .toggle-container input:checked+.slider:before {
     transform: translate(40px);
 }
+
 .toggle-container input:checked+.slider::after {
     content: "on";
     left: 8px;
 }
+
 .toggle-container .slider.round {
     border-radius: 34px;
     border: 1px solid #fff;
 }
+
 .toggle-container .slider.round:before {
     border-radius: 50%;
 }
 
 /* media queries */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
+    .hints {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 300px;
+        height: 300px;
+        margin: -150px 0 0 -150px;
+        z-index: 1;
+    }
+    .hints .start {
+        border-radius: 10px 10px 0 0;
+    }
+    .hints .settings {
+        border-radius: 0 0 10px 10px;
+    }
+    .sections {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 600px;
+        height: 600px;
+        margin: -300px 0 0 -300px;
+        box-shadow: 5px 5px 5px #888888;
+        border-radius: 10px;
+    }
+    .sections .top-left-btn {
+        border-radius: 10px 0 0;
+    }
+    .sections .top-right-btn {
+        border-radius: 0 10px 0 0;
+    }
+    .sections .btm-left-btn {
+        border-radius: 0 10px 0;
+    }
+    .sections .btm-right-btn {
+        border-radius: 0 0 10px;
+    }
+
+    .start button {
+        background-color: #ffed91;
+        color: #000;
+    }
+    .start button:hover {
+        background-color: #f9ffd0;
+        color: #000;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
     /* tablets and desktop */
     body {
-        border: 5px solid red;
+        display: flex;
+    }
+    .hints, .sections {
+        height: 100vh;
+        width: 50%;
+    }
+    .start {
+        background-color: #cc5f79;
+
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .start button {
+        font-size: 3.5em;
     }
 }
 
 @media only screen and (max-width: 767px) {
     /* phones */
-    body {
-        border: 5px solid green;
+    .start {
+        background-color: #cc5f79;
     }
 }
 
 @media only screen and (max-width: 767px) and (orientation: portrait) {
     /* portrait phones */
-    body {
-        border: 5px solid blue;
-    }
+    /* no changes required. */
 }
